# LetterShifter

./: CMakeLists.txt  README.md
include/: mainwindow.h  ui_mainwindow.h
src/: main.cpp  mainwindow.cpp  mainwindow.ui
